--- a/app/sass/components/_theme.scss
+++ b/app/sass/components/_theme.scss
@@ -178,8 +178,19 @@ main {
                     @include font-size(14px);
                     font-weight: $font-weight-bold;
                 }
+                @media #{$desktop} {
+                  position: absolute;
+                  float: none;
+                  clear: left;
+                  left: 65px;
+                  top: 25px;
+                }
                 @media #{$tablet} {
                     float: left;
+                    clear: none;
+                    left: auto;
+                    top: auto;
+                    position: relative;
                     margin-left: 30px;
                 }
             }
